<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutbackground"
            android:padding="3dp"
            android:layout_marginRight="5dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="152"
                android:textColor="@color/colorwhite"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="bought this item"
            android:textColor="#CB7025"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundlayout2"
            android:padding="3dp"
            android:layout_marginRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@color/colorwhite"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ongoing deal"
            android:textColor="#84CB96"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewsimba"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/simba"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Floated Yesterday"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewsimba"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="Join and buy now!"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewsimba"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginTop="8dp"
            android:text="@string/Rs"
            android:textColor="#E56F67"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:text=" 425"
            android:textAlignment="viewStart"
            android:textColor="#E56F67"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/join_now_btn1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="only 1 left"
            android:textAlignment="center"
            android:textColor="#E56F67"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/join_now_btn1"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/join_now_btn1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/joinnowbtn"
            android:padding="10dp"
            android:text="join now"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.178" />
    </android.support.constraint.ConstraintLayout>


    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewsimba1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/timon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Floated Yesterday"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewsimba1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView41"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="Join and buy now!"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewsimba1"
            app:layout_constraintTop_toBottomOf="@+id/textView41"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView71"
            android:layout_marginTop="8dp"
            android:text="@string/Rs"
            android:textColor="#E56F67"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView71"
            app:layout_constraintEnd_toStartOf="@+id/textView81"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:text=" 425"
            android:textAlignment="viewStart"
            android:textColor="#E56F67"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/join_now_btn2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="only 1 left"
            android:textColor="#E56F67"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/join_now_btn2"
            app:layout_constraintTop_toBottomOf="@+id/textView81"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/join_now_btn2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/joinnowbtn"
            android:padding="10dp"
            android:text="join now"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.178" />
    </android.support.constraint.ConstraintLayout>


    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewsimba2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/aladin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Floated Yesterday"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewsimba2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView42"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="Join and buy now!"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewsimba2"
            app:layout_constraintTop_toBottomOf="@+id/textView42"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:text="@string/Rs"
            android:textColor="#E56F67"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView82"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView82"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:text=" 425"
            android:textAlignment="viewStart"
            android:textColor="#E56F67"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/join_now_btn3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/join_now_btn3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/joinnowbtn"
            android:padding="10dp"
            android:text="@string/join"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.178" />
    </android.support.constraint.ConstraintLayout>


    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:src="@drawable/expand"
            android:id="@+id/descriptionBtn"
            android:background="@color/colorwhite"/>

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ael_expanded="false"
            app:ael_duration="500"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:ael_interpolator="bounce"
            app:ael_orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                android:layout_below="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/secondary_text" />


        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    </LinearLayout>




</LinearLayout>